# heat-task

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  External Control Webinar [itfv7_E__EM].srt  Makefile  README.md  environment.yml  justfile  pyproject.toml  run_and_poll.py  test.py
.github/workflows/: release.yml  tests.yml
conditions/: example.toml
data/XXX000_example_20260515T152357/: manifest.json
data/XXX000_example_20260515T155150/: manifest.json  temperature_trace_XXX000_example.csv
data/XXX000_example_20260515T155753/: manifest.json
data/XXX000_example_20260515T155832/: behavioral_XXX000_example.csv  manifest.json  temperature_trace_XXX000_example.csv
data/XXX000_example_20260518T093729/: behavioral_XXX000_example.csv  manifest.json  temperature_trace_XXX000_example.csv
docs/: development.md  mms-networking.md  mms-program-parameters.md  releasing.md  usage.md
examples/: experiment.ats
examples/medoc-external-control/: Example_app.m  client.m  formatcommand.m  formatresponse.m  main.m
examples/medoc-python-api/: README.md  command_api_example.py  connector.py  examples.py  preferences.json  requirements.txt  tsa_device.py
examples/medoc-python-api/UnitTests/: unittest_converter.py
examples/medoc-python-api/commands/: erase_error_command.py  m_clear_command_buffer.py  m_command.py  m_enable_termode.py  m_end_test_command.py  m_finite_ramp_by_temperature_command.py  m_finite_ramp_by_time_command.py  m_finite_ramp_command.py  m_finite_ramp_safe_duration_command.py  m_getVersion_command.py  m_get_active_thermode.py  m_get_error_command.py  m_get_thermode_state_command.py  m_getstatusTCU_command.py  m_message.py  m_run_test.py  m_set_TCU_state.py  m_set_active_thermode.py  m_simulate_response_unit.py  m_stop_test_command.py  m_temperature_command.py  r_finite_ramp_by_temperature.py  r_get_status_TCU.py  response.py
src/heat_task/: __main__.py  conditions.py  config.py  console.py  detector.py  display.py  input.py  recorder.py  session.py  trial.py
src/heat_task/io/: __init__.py  conditions.py  recording.py  setup_wizard.py
src/heat_task/medoc/: __init__.py  cli.py  client.py  models.py  protocol.py  transport.py
src/heat_task/medoc/cli/: __init__.py  commands.py  formatting.py  parser.py
src/heat_task/task/: __init__.py  console.py  framerate.py  instructions.py  mms.py  phase_tracker.py  phases.py  rating.py  sequence.py  status.py  trial.py
src/medoc/: __init__.py  ats_parser.py  cli.py  client.py  experiment.py  models.py  protocol.py  runner.py  safety.py  transport.py
src/medoc/ramp_hold/: __init__.py  __main__.py  conditions.py  config.py  detector.py  display.py  recorder.py  session.py  trial.py
src/medoc/serial/: __init__.py  command_api.py  connector.py  crc8.py  device.py  enums.py  event.py  mock.py  response_builder.py  token_holder.py
src/medoc/serial/commands/: error_occurance.py  m_clear_command_buffer.py  m_command.py  m_enable_termode.py  m_end_test_command.py  m_finite_ramp_by_temperature_command.py  m_finite_ramp_by_time_command.py  m_finite_ramp_command.py  m_finite_ramp_safe_duration_command.py  m_getVersion_command.py  m_get_active_thermode.py  m_getstatusTCU_command.py  m_message.py  m_run_test.py  m_set_TCU_state.py  m_set_active_thermode.py  m_simulate_response_unit.py  m_stop_test_command.py  m_temperature_command.py  r_finite_ramp_by_temperature.py  r_finite_ramp_by_time.py  r_get_errors_command.py  r_get_pid_calculation_response.py  r_get_status_TCU.py  r_get_version_command.py  r_status.py  response.py
src/medoc/serial/utilities/: converters.py  temp_converter.py
tests/: test_ats_parser.py  test_cli.py  test_client.py  test_protocol.py  test_ramp_hold_conditions.py  test_ramp_hold_detector.py  test_ramp_hold_recorder.py  test_runner.py  test_safety.py  test_serial_commands.py  test_serial_converters.py  test_serial_crc8.py
