[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medoc"
version = "0.1.0"
description = "Python client library for Medoc MMS external control"
requires-python = ">=3.11"
dependencies = [
    "psychopy>=2025.1",
    "rich>=15.0.0",
]

[project.scripts]
medoc = "medoc.cli:main"
medoc-ramp-hold = "medoc.ramp_hold.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["src/medoc"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q"]

[tool.pytest.ini_options]
testpaths = ["tests"]
